jokenpo.css
html,body{
  margin: 0;
  padding: 0;

  /*https://fonts.google.com/specimen/PT+Sans+Caption?sidebar.open&selection.family=PT+Sans+Caption*/
  font-family: 'PT Sans Caption', sans-serif;
  color: #ffffff;
}
body{
  background-color: #d6d6d6;
}
#game {
  display: flex;
  flex-direction: column;
  background-color: #a3a3a300;

}
#title{
  text-align: center;
  background-color: #7e7e7e00;
  color: #000000;

}
#board{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  background-color: #6b6b6b00;

}
img{
  margin-top: 1em;
  width: 4em;
  height: 5em;
}
.game_field_space {
  display: flex;
  flex-direction: row;
  background-color: #ff2f2f;
  margin: 0.5em;
  padding: 1em;
  border-radius: 5px;
  box-shadow: 3px 3px 10px #00000057;

}
#versus{
  background-color: #ffffff00;
  margin: 2em;
  color: #ffffff;
  text-shadow:2px 2px #000000;
  box-shadow: 0 0;
}
.move_options{
  display: flex;
  flex-direction: row;
  background-color: #2c2c2c00;
  margin: 1em;
}
#messages{
  background-color: #22222200;
}
#notice{
  text-align: center;
  background-color: #777777;
  margin: 0.5em;
  padding: 0.3em;
  border-radius: 5px;
  box-shadow: 3px 3px 10px #00000057;
}

